--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
         with:
-          ref: refs/heads/master
+          ref: refs/heads/main
       - name: Setup git repo
         run: |
           git config user.name $GITHUB_ACTOR
@@ -38,4 +38,4 @@ jobs:
           name: npm-logs
           path: ~/.npm/_logs
       - name: Push release commit and tag to GitHub
-        run: git push gh-origin HEAD:master --tags
+        run: git push gh-origin HEAD:main --tags
