--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,9 +21,7 @@ jobs:
         run: |
           git config user.name $GITHUB_ACTOR
           git config user.email gh-actions-${GITHUB_ACTOR}@github.com
-          git remote add gh-origin https://${GITHUB_ACTOR}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git        
-        env:
-          GITHUB_TOKEN: ${{ secrets.PUBLISH_GITHUB_TOKEN }}
+          git remote add gh-origin https://${GITHUB_ACTOR}:${{ env.PUBLISH_GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git                
       - uses: actions/setup-node@v1
         with:
           node-version: 16
