--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,3 +11,5 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
+          files: |
+            dist/**
