--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
       - run: npm install
       - name: Version and publish to npm
         run: |                    
-          npm version ${{ github.event.inputs.version_type }} --force -m "Version %s [skip ci]"
+          npm version ${{ github.event.inputs.version_type }} --force -m "Version %s"
           npm set //registry.npmjs.org/:_authToken ${{ secrets.NODE_AUTH_TOKEN }}
           npm publish        
       - uses: actions/upload-artifact@v2
