--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,6 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           files: |
-            dist/index.cjs
-            dist/index.mjs
-            dist/index.d.ts
+            ./dist/index.cjs
+            ./dist/index.mjs
+            ./dist/index.d.ts
