Checkout files so we can reference them

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,11 +7,10 @@ jobs:
   tagged-release:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           files: |
-            ./dist/index.cjs
-            ./dist/index.mjs
-            ./dist/index.d.ts
+            ./dist/**            
