--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   },
   "types": "dist/index.d.ts",
   "bin": "./bin/jsh.mjs",
+  "files": [
+    "./bin/",
+    "./dist/"
+  ],
   "devDependencies": {
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
