Include include bin jsh.mjs

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "types": "dist/index.d.ts",
   "bin": "./bin/jsh.mjs",
   "files": [
-    "/bin/**/*",
+    "/bin/jsh.mjs",
     "/dist/**/*"
   ],
   "devDependencies": {
