--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,18 +31,21 @@ jobs:
         run: |                    
           npm version ${{ github.event.inputs.version_type }} --force -m "Version %s"
           npm set //registry.npmjs.org/:_authToken ${{ secrets.NODE_AUTH_TOKEN }}
-          npm publish        
+          npm publish
       - uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: npm-logs
           path: ~/.npm/_logs
       - name: Push release commit and tag to GitHub
-        run: git push gh-origin HEAD:main --tags
+        id: push
+        run: |
+          git push gh-origin HEAD:main --tags
+          echo "::set-output name=tag-name::$(git describe --tags --abbrev=0)"
       - name: Create a Release
-        uses: "marvinpinto/action-automatic-releases@latest"
+        uses: softprops/action-gh-release@v1
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
+          tag_name: ${{ steps.push.outputs.tag-name }}
+          generate_release_notes: true          
           files: |
             ./dist/**
