--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "jest": "^28.1.0",
     "node-fakeweb": "^1.1.0",
     "ts-jest": "^28.0.3",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "ts-node": "^10.8.0"
   },
   "scripts": {
     "build": "rm -rf dist/ && tsc -p src/tsconfig.mjs.json && mv ./dist/index.js ./dist/index.mjs && tsc -p src/tsconfig.cjs.json && mv ./dist/index.js ./dist/index.cjs",
